--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -335,33 +335,33 @@
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Dijeli sa</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Dobrodošli u Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure i RedPhone sada su jedna privatna aplikacija za komunikaciju u svakoj situaciji: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Dobrodošli u Signal!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure je sada Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure i RedPhone sada su jedna aplikacija: Signal. Pritisnite za pregled.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Pozdravite zaštićene videopozive</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal sada podržava zaštićene video pozive. Jednostavno započnite Signal poziv kao i inače, pritisnite video tipku i mahnite sagovorniku.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal sada podržava zaštićene video pozive.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal sada podržava zaštićene video pozive. Pritisnite za pregled.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Spremni ste za licem u lice?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sada možete podijeliti profilnu sliku i ime sa prijateljima na Signalu</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Stigli su Signal profili</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Novo: indikatori kucanja</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Sada možete, ako želite, vidjeti i podijeliti s drugima obavijest da se poruka piše.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Želite li ih odmah aktivirati?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Indikatori kucanja su stigli</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Prikaži indikatore kucanja</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Uključite indikatore kucanja</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Ne, hvala</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Novo: prikazi linka</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Prikazi linka sa nekih od najpopularnijih internet stranica sada su podržani.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Ovu mogućnost možete aktivirati ili deaktivirati kada god to poželite kroz podešavanja Signala (Privatnost &gt; Šalji prikaze veza).</string>
-  <string name="ExperienceUpgradeActivity_got_it">Primljeno na znanje</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Novo: naljepnice</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Zašto pisati riječi kad možete koristiti naljepnice?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Zašto pisati riječi kad možete koristiti naljepnice? Dotaknite ovu sličicu na Vašoj tastaturi:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Krenimo</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Dobrodošli u Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure i RedPhone sada su jedna privatna aplikacija za komunikaciju u svakoj situaciji: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Dobrodošli u Signal!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure je sada Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure i RedPhone sada su jedna aplikacija: Signal. Pritisnite za pregled.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Pozdravite zaštićene videopozive</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal sada podržava zaštićene video pozive. Jednostavno započnite Signal poziv kao i inače, pritisnite video tipku i mahnite sagovorniku.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal sada podržava zaštićene video pozive.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal sada podržava zaštićene video pozive. Pritisnite za pregled.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Spremni ste za licem u lice?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sada možete podijeliti profilnu sliku i ime sa prijateljima na Signalu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Stigli su Signal profili</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Novo: indikatori kucanja</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Sada možete, ako želite, vidjeti i podijeliti s drugima obavijest da se poruka piše.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Želite li ih odmah aktivirati?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Indikatori kucanja su stigli</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">Prikaži indikatore kucanja</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Uključite indikatore kucanja</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Ne, hvala</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Novo: prikazi linka</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Prikazi linka sa nekih od najpopularnijih internet stranica sada su podržani.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Ovu mogućnost možete aktivirati ili deaktivirati kada god to poželite kroz podešavanja Signala (Privatnost &gt; Šalji prikaze veza).</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">Primljeno na znanje</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Novo: naljepnice</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Zašto pisati riječi kad možete koristiti naljepnice?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Zašto pisati riječi kad možete koristiti naljepnice? Dotaknite ovu sličicu na Vašoj tastaturi:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Krenimo</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Primam poruku…</string>
   <!--GcmRefreshJob-->
@@ -1492,8 +1492,8 @@
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Prenosim Signalovu bazu podataka</string>
   <string name="PushDecryptJob_new_locked_message">Nova zaključana poruka</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Otključajte kako biste vidjeli poruke na čekanju</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Otključajte da dovršite ažuriranje</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Molimo otključajte Signal da dovršite ažuriranje</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Otključajte da dovršite ažuriranje</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Molimo otključajte Signal da dovršite ažuriranje</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Lozinka za rezervne kopije</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Rezervne kopije bit će pohranjene u memoriju uređaja i šifrirane lozinkom navedenom dolje. Morate znati lozinku da biste mogli vratiti podatke iz rezervne kopije.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Zapisao/la sam ovu lozinku. Bez nje neću moći vratiti podatke iz rezervne kopije.</string>
