--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -309,33 +309,33 @@
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Diunjukaken kangge</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Sugeng rawuh ing Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">Sakmenika TextSecure lan RedPhone dados pirantos perpesanan pribadi tunggil kangge ragam-ragam kabetahan: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Sugeng rawuh ing Signal!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">Sakmenika TextSecure dados Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">Sakmenika TextSecure lan RedPhone dados aplikasi tunggil: Signal. Tutul kangge nyobi.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Monggo cobi telepon kangge video ingkang aman.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Sakmenika Signal saged diginakaken kangge telepon video ingkang aman. Telepon mawon ngginakaken telepon Signal kados biasanipun, tutul tombol video, lajeng sampun.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Sakmenika Signal saged dipunginakaken kangge telepon video ingkang aman.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Sakmenika Signal saged dipunginakaken kangge telepon video ingkang aman. Tutul kangge nyobi.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Sakmenika wekdalipun tampil!</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sakmenika sampeyan saged ngunjukaken nami lan foto profil dhateng kanca-kanca ing Signal</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Sakmenika sampun enten profil Signal</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Nepangaken indikator ketikan.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Sakmenika sampeyan saged mileh menawi badhe ningali lan ngunjukaken kala pesen taksih diketik.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Badhe nyobi ngaktifaken fitur kasebut?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Sakmenika sampun enten indikator ketikan</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Aktifaken indikator ketikan</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Gesangaken indikator ketikan</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Mboten usah</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Nepangaken tampilan awal tautan.</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Sakmenika tampilan awal tautan dipundukung kangge ragam-ragam situs paling populer ing internet.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Sampeyan saged ngaktifaken utawi ngenonaktifaken fitur kasebut kala-kala saking panatanan Signal (Privasi &gt; Kirimaken tampilan awal tautan).</string>
-  <string name="ExperienceUpgradeActivity_got_it">Oke</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Nepangaken stiker</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Punapa nembung menawi saged ngginakaken stiker?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Punapa nembung menawi saged ngginakaken stiker? Tutul ikon ing keyboard sampeyan:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Mangga</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Sugeng rawuh ing Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">Sakmenika TextSecure lan RedPhone dados pirantos perpesanan pribadi tunggil kangge ragam-ragam kabetahan: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Sugeng rawuh ing Signal!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">Sakmenika TextSecure dados Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">Sakmenika TextSecure lan RedPhone dados aplikasi tunggil: Signal. Tutul kangge nyobi.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Monggo cobi telepon kangge video ingkang aman.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Sakmenika Signal saged diginakaken kangge telepon video ingkang aman. Telepon mawon ngginakaken telepon Signal kados biasanipun, tutul tombol video, lajeng sampun.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Sakmenika Signal saged dipunginakaken kangge telepon video ingkang aman.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Sakmenika Signal saged dipunginakaken kangge telepon video ingkang aman. Tutul kangge nyobi.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Sakmenika wekdalipun tampil!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sakmenika sampeyan saged ngunjukaken nami lan foto profil dhateng kanca-kanca ing Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Sakmenika sampun enten profil Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Nepangaken indikator ketikan.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Sakmenika sampeyan saged mileh menawi badhe ningali lan ngunjukaken kala pesen taksih diketik.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Badhe nyobi ngaktifaken fitur kasebut?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Sakmenika sampun enten indikator ketikan</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">Aktifaken indikator ketikan</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Gesangaken indikator ketikan</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Mboten usah</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Nepangaken tampilan awal tautan.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Sakmenika tampilan awal tautan dipundukung kangge ragam-ragam situs paling populer ing internet.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Sampeyan saged ngaktifaken utawi ngenonaktifaken fitur kasebut kala-kala saking panatanan Signal (Privasi &gt; Kirimaken tampilan awal tautan).</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">Oke</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Nepangaken stiker</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Punapa nembung menawi saged ngginakaken stiker?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Punapa nembung menawi saged ngginakaken stiker? Tutul ikon ing keyboard sampeyan:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Mangga</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Taksih nampi pesen…</string>
   <!--GcmRefreshJob-->
@@ -1472,8 +1472,8 @@
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Taksih mindahi database Signal</string>
   <string name="PushDecryptJob_new_locked_message">Pesen ingkang dipunkunci enggal</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Uculaken kunci kangge ningali pesen-pesen ingkang ketundha</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Bikak kunci kangge ngerampungaken pangenggalan</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Bikak kunci Signal kangge ngerampungaken pengenggalan</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Bikak kunci kangge ngerampungaken pangenggalan</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Bikak kunci Signal kangge ngerampungaken pengenggalan</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Tembung sandi serep</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Serep bakal dipunsimpen ing penyimpenan njawi lan dipunenkripsi ngginakaken tembung sandi ing ngandhap. Sampeyan wajib ngeling tembung sandi kasebut kangge mulihaken serep.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Kula sampun nyatet tembung sandi niki. Tanpa tembung sandi kasebut, kula mboten saged mulihaken serep.</string>
