--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -323,33 +323,33 @@
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">यासोबत सामायिक करा </string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal मध्ये स्वागत आहे.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure आणि RedPhone आता एक खाजगी संदेशक आहेत, प्रत्येक परिस्थितीसाठी: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal मध्ये स्वागत आहे!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure आता Signal आहे.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure आणि RedPhone आता एक अॅप आहेत: Signal. वापरण्यासाठी टॅप करा.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">सुरक्षित व्हिडिओ कॉल यांना नमस्कार म्हणा.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते. सामान्यपणे Signal कॉल चालू करा,व्हिडिओ बटण टॅप करा, आणि नमस्कार म्हणा.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते. वापरण्यासाठी टॅप करा.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">आपल्या क्लोझअप करिता तयार?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">आता आपण प्रोफाईल फोटो आणि नाव Signal वर मित्रांसोबत सामायिक करू शकता</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal प्रोफाईल येथे आहेत</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">सादर करत आहे टाईपिंग निर्देशक.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">आता आपण संदेश टाईप होत असताना पर्यायीरीत्या बघू आणि सामायिक करू शकता. </string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">आपल्याला ते आता सक्षम करण्यास आवडेल का?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">टाईपिंग निर्देशक येथे आहेत</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">टाईपिंग निर्देशक सक्षम करा</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">टाईपिंग निर्देशक चालू करा</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">नाही धन्यवाद</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">सादर करत आहे दुवा पुनरावलोकन.</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">इंटरनेट वरील सर्वात लोकप्रिय साईट पैकी काहींकरिता पर्यायी दुवा पुनरावलोकन आता समर्थित आहे.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">आपण हे वैशिष्ट्य कुठल्याही वेळी आपल्या Signal सेटिंग मध्ये (गोपनीयताआणि दुवा पुनरावलोकन पाठवा)अक्षम किंवा सक्षम करू शकता.</string>
-  <string name="ExperienceUpgradeActivity_got_it">कळले</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">सादर करत आहे स्टिकर</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">स्टिकर वापरू शकत असताना शब्द का वापरायचे?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">आपण स्टिकर वापरू शकत असल्यावर शब्द का वापरायचे? आपल्या कीबोर्ड करीता हे चिन्ह टॅप करा:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">चला</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal मध्ये स्वागत आहे.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure आणि RedPhone आता एक खाजगी संदेशक आहेत, प्रत्येक परिस्थितीसाठी: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal मध्ये स्वागत आहे!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure आता Signal आहे.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure आणि RedPhone आता एक अॅप आहेत: Signal. वापरण्यासाठी टॅप करा.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">सुरक्षित व्हिडिओ कॉल यांना नमस्कार म्हणा.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते. सामान्यपणे Signal कॉल चालू करा,व्हिडिओ बटण टॅप करा, आणि नमस्कार म्हणा.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal आता सुरक्षित व्हिडिओ कॉलिंगचे समर्थन करते. वापरण्यासाठी टॅप करा.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">आपल्या क्लोझअप करिता तयार?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">आता आपण प्रोफाईल फोटो आणि नाव Signal वर मित्रांसोबत सामायिक करू शकता</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal प्रोफाईल येथे आहेत</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">सादर करत आहे टाईपिंग निर्देशक.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">आता आपण संदेश टाईप होत असताना पर्यायीरीत्या बघू आणि सामायिक करू शकता. </string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">आपल्याला ते आता सक्षम करण्यास आवडेल का?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">टाईपिंग निर्देशक येथे आहेत</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">टाईपिंग निर्देशक सक्षम करा</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">टाईपिंग निर्देशक चालू करा</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">नाही धन्यवाद</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">सादर करत आहे दुवा पुनरावलोकन.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">इंटरनेट वरील सर्वात लोकप्रिय साईट पैकी काहींकरिता पर्यायी दुवा पुनरावलोकन आता समर्थित आहे.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">आपण हे वैशिष्ट्य कुठल्याही वेळी आपल्या Signal सेटिंग मध्ये (गोपनीयताआणि दुवा पुनरावलोकन पाठवा)अक्षम किंवा सक्षम करू शकता.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">कळले</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">सादर करत आहे स्टिकर</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">स्टिकर वापरू शकत असताना शब्द का वापरायचे?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">आपण स्टिकर वापरू शकत असल्यावर शब्द का वापरायचे? आपल्या कीबोर्ड करीता हे चिन्ह टॅप करा:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">चला</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">संदेश पुनर्प्राप्त करत आहे…</string>
   <!--GcmRefreshJob-->
@@ -1507,8 +1507,8 @@
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Signal डेटाबेस स्थलांतर करत आहे</string>
   <string name="PushDecryptJob_new_locked_message">नवीन लॉक केलेला संदेश</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">प्रलंबित संदेश बघण्यासाठी अनलॉक करा</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">पूर्ण अद्यतनासाठी अनलॉक करा</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">अद्यतन पूर्ण करण्यासाठी कृपया Signal अनलॉक करा</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">पूर्ण अद्यतनासाठी अनलॉक करा</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">अद्यतन पूर्ण करण्यासाठी कृपया Signal अनलॉक करा</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">बॅकअप पासफ्रेझ</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">बॅकअप बाह्य संचयन मध्ये जतन केले जातील आणि खालील पासफ्रेझ सोबत एन्क्रिप्ट केले जातील. बॅकअप पुनर्स्थापना करण्यासाठी आपल्याकडे हे पासफ्रेझ असायलाच हवे.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">मी हे पासफ्रेझ लिहून ठेवले आहे. याविना, मी बॅकअपची पुनर्स्थापना करण्यास अक्षम असेल.</string>
