--- a/app/src/main/res/values-pa-rPK/strings.xml
+++ b/app/src/main/res/values-pa-rPK/strings.xml
@@ -326,33 +326,33 @@
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">ایہدے نال سانجھا کرو</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf"> Signal اچ جی آیاں نوں۔</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure تے RedPhone ہن ہر صورتحال لئی اک نجی میسنجر نیں : Signal ۔</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal اچ جی آیاں نوں!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal"> TextSecure ہن Signal اے۔</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure تے RedPhone ہن اک ای ایپ نیں : Signal ۔ کھوجن لئی بٹن دبو۔</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">ویڈیو کال محفوظ کرن لئی ہیلو کہو۔</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔ معمول دی طرح بس اکSignal کال شروع کرو، ویڈیو بٹن دباؤ ، تے ہیلو اچ ہتھ ہلاؤ ۔</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔ کھوجن لئی بٹن دبو۔</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">اپنے کلوزاپ لئی تیار او؟</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Signal تے ہن تسیں دوستاں دے نال اک پروفائل فوٹو تے ناں سانجھا کر سکدے او</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal پروفائلز ایتھے نیں</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">ٹائپنگ اشارے متعارف کرا رئیا اے۔</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed"> ہن سنیہے ٹائپ ہون دے دوران تسیں اختیاری طور تے ویکھ سکدے او تے سانجھا کر سکدے او۔</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">کیہ تسیں اوہناں نوں فعال کرنا چاہندے او؟</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">ٹائپنگ اشارے ایتھے نیں</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">ٹائپنگ اشارے فعال کرو</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">ٹائپنگ اشارے آن کرو</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">نئیں شکریہ</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">لنک پیش نظاریاں دا تعارف کرا رئیا اے۔</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">اختیاری لنک پیش نظارے ہن انٹرنیٹ تے کجھ مشہور ترین سائٹس لئی معاونت یافتہ نیں۔</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">تسیں اپنیاںSignal دیاں ترتیباں اچ کسے وی ویلے ایس خصوصیت نوں غیر فعال یاں فعال کر سکدے او (رازداری &gt; لنک پیش نظارے گھلو)۔</string>
-  <string name="ExperienceUpgradeActivity_got_it">سمجھ آگیا</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">اسٹیکرز متعارف کرا رئیا اے</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">جدوں تسیں اسٹیکرز استعمال کرسکدے او تے الفاظ کیوں استعمال کرئیے؟</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">جدوں تسیں اسٹیکرز استعمال کرسکدے او تے الفاظ کیوں استعمال کرئیے؟ اپنے کی بورڈ تے ایس آئیکن نوں دبو:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">چلو شروع کرئیے</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf"> Signal اچ جی آیاں نوں۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure تے RedPhone ہن ہر صورتحال لئی اک نجی میسنجر نیں : Signal ۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal اچ جی آیاں نوں!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal"> TextSecure ہن Signal اے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure تے RedPhone ہن اک ای ایپ نیں : Signal ۔ کھوجن لئی بٹن دبو۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">ویڈیو کال محفوظ کرن لئی ہیلو کہو۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔ معمول دی طرح بس اکSignal کال شروع کرو، ویڈیو بٹن دباؤ ، تے ہیلو اچ ہتھ ہلاؤ ۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal ہن محفوظ ویڈیو کالنگ دی معاونت کردا اے۔ کھوجن لئی بٹن دبو۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">اپنے کلوزاپ لئی تیار او؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Signal تے ہن تسیں دوستاں دے نال اک پروفائل فوٹو تے ناں سانجھا کر سکدے او</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal پروفائلز ایتھے نیں</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">ٹائپنگ اشارے متعارف کرا رئیا اے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed"> ہن سنیہے ٹائپ ہون دے دوران تسیں اختیاری طور تے ویکھ سکدے او تے سانجھا کر سکدے او۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">کیہ تسیں اوہناں نوں فعال کرنا چاہندے او؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">ٹائپنگ اشارے ایتھے نیں</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">ٹائپنگ اشارے فعال کرو</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">ٹائپنگ اشارے آن کرو</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">نئیں شکریہ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">لنک پیش نظاریاں دا تعارف کرا رئیا اے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">اختیاری لنک پیش نظارے ہن انٹرنیٹ تے کجھ مشہور ترین سائٹس لئی معاونت یافتہ نیں۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">تسیں اپنیاںSignal دیاں ترتیباں اچ کسے وی ویلے ایس خصوصیت نوں غیر فعال یاں فعال کر سکدے او (رازداری &gt; لنک پیش نظارے گھلو)۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">سمجھ آگیا</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">اسٹیکرز متعارف کرا رئیا اے</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">جدوں تسیں اسٹیکرز استعمال کرسکدے او تے الفاظ کیوں استعمال کرئیے؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">جدوں تسیں اسٹیکرز استعمال کرسکدے او تے الفاظ کیوں استعمال کرئیے؟ اپنے کی بورڈ تے ایس آئیکن نوں دبو:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">چلو شروع کرئیے</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">اک سنیہا بازیافت کر رئیا اے…</string>
   <!--GcmRefreshJob-->
@@ -1555,8 +1555,8 @@
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Signal ڈیٹا بیس منتقل کرنا</string>
   <string name="PushDecryptJob_new_locked_message">نواں مقفل سنیہا</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">التوا اچ پئۓ سنیہے ویکھن لئی غیر مقفل کرو</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">اپ ڈیٹ مکمل کرن لئی غیر مقفل کرو</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">اپ ڈیٹ مکمل کرن لئی مہربانی کر کےSignal نوںغیرمقفل کرو</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">اپ ڈیٹ مکمل کرن لئی غیر مقفل کرو</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">اپ ڈیٹ مکمل کرن لئی مہربانی کر کےSignal نوںغیرمقفل کرو</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">بیک اپ پاس فریز</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">بیک اپ نوں بیرونی اسٹوریج اچ محفوظ کیتا جاوے گا تے تھلے دتے ہوئے پاس فریز دے نال ایہدی خفیہ کاری ہووے گی۔ بیک اپ بحال کرن لئی تہاڈے کول ایہہ پاس فریز ہونا لازمی اے۔</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">میں اے پاس فریز لکھ لیا اے۔ ایہدے توں بغیر، میں بیک اپ بحال نئیں کر سکاں گا۔</string>
