--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -376,33 +376,33 @@
   <string name="ShareActivity_share_with">Zdieľať s</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Viaceré prílohy sú podporované iba pre obrázky a videá</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Vitajte v Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure a RedPhone sú teraz jedným súkromným messengerom pre každú situáciu: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Vitajte v Signal!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure je odteraz Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure a RedPhone sú odteraz jednou aplikáciou: Signal. Ťuknutím preskúmajte.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Privítajte bezpečné videohovory.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal odteraz podporuje zabezpečené videohovory. Začnite Signal hovor ako obvykle, ťuknite na tlačidlo videa a zamávajte.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal odteraz podporuje zabezpečené videohovory.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal odteraz podporuje zabezpečené videohovory. Ťuknutím preskúmajte.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ste pripravený na portrét?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Teraz môžete s vašimi priateľmi na Signalu zdieľať vašu profilovú fotku a meno</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profily sú tu</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Predstavujeme indikátory písania.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Teraz môžete voliteľne vidieť a zdieľať, keď sú správy písané.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Želáte si ich zapnúť?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Indikátory písania sú tu</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Povoliť indikátory písania</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Zapnúť indikátory písania</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Nie, ďakujem</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Uvádzame náhľady stránok.</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Náhľady sú teraz voliteľne podporované pre niektoré z najpopulárnejších webových stránok na internete.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Túto funkciu môžete kedykoľvek vypnúť alebo zapnúť v nastaveniach Signal-u (Súkromie &gt; Posielať náhľady stránok).</string>
-  <string name="ExperienceUpgradeActivity_got_it">Chápem</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Predstavujeme nálepky</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Prečo používať slová, keď môžete používať nálepky?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Prečo používať slová, keď môžete používať nálepky? Ťuknite ná túto ikonu na klávesnici:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Poďme na to</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Vitajte v Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure a RedPhone sú teraz jedným súkromným messengerom pre každú situáciu: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Vitajte v Signal!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure je odteraz Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure a RedPhone sú odteraz jednou aplikáciou: Signal. Ťuknutím preskúmajte.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Privítajte bezpečné videohovory.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal odteraz podporuje zabezpečené videohovory. Začnite Signal hovor ako obvykle, ťuknite na tlačidlo videa a zamávajte.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal odteraz podporuje zabezpečené videohovory.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal odteraz podporuje zabezpečené videohovory. Ťuknutím preskúmajte.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ste pripravený na portrét?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Teraz môžete s vašimi priateľmi na Signalu zdieľať vašu profilovú fotku a meno</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profily sú tu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Predstavujeme indikátory písania.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Teraz môžete voliteľne vidieť a zdieľať, keď sú správy písané.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Želáte si ich zapnúť?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Indikátory písania sú tu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">Povoliť indikátory písania</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Zapnúť indikátory písania</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Nie, ďakujem</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Uvádzame náhľady stránok.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Náhľady sú teraz voliteľne podporované pre niektoré z najpopulárnejších webových stránok na internete.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Túto funkciu môžete kedykoľvek vypnúť alebo zapnúť v nastaveniach Signal-u (Súkromie &gt; Posielať náhľady stránok).</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">Chápem</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Predstavujeme nálepky</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Prečo používať slová, keď môžete používať nálepky?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Prečo používať slová, keď môžete používať nálepky? Ťuknite ná túto ikonu na klávesnici:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Poďme na to</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Preberanie správy…</string>
   <!--GcmRefreshJob-->
@@ -1301,6 +1301,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="HelpFragment__could_not_upload_logs">Nepodarilo sa nahrať denníky</string>
   <string name="HelpFragment__signal_support">Podpora Signal</string>
   <string name="HelpFragment__please_be_as_descriptive_as_possible">Prosíme, čo najpodrobnejšie popíšte situáciu a pomôžte nám tak porozumieť vášmu problému.</string>
+  <string name="HelpFragment__no_email_app_found">Nenašla sa žiadna e-mailová aplikácia.</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Import</string>
   <string name="arrays__use_default">Použiť predvolené</string>
@@ -1719,8 +1720,8 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Presúvam databázu Signalu</string>
   <string name="PushDecryptJob_new_locked_message">Nová uzamknutá správa</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Odomknite pre zobrazenie nevybavených správ</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Odomknite pre dokončenie aktualizácie</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Odomknite Signal pre dokončenie aktualizácie</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Odomknite pre dokončenie aktualizácie</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Odomknite Signal pre dokončenie aktualizácie</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Heslo pre zálohy</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Zálohy budú uložené na úložisko zašifrované nasledujúcim heslom. K obnoveniu zálohy musíte mať toto heslo k dispozícii.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Heslo som si zapísal/a, bez hesla nebudem schopný/á obnoviť zálohy.</string>
