--- a/app/src/main/res/values-tl/strings.xml
+++ b/app/src/main/res/values-tl/strings.xml
@@ -348,33 +348,33 @@
   <string name="ShareActivity_share_with">Ibahagi kay</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Ang maramihang kalakip ay suportado lamang para sa mga imahe at videos</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Welcome sa Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">Ang TextSecure at RedPhone ay isa nang pribadong mensahero para sa lahat ng sitwasyon: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Welcome sa Signal!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">Ang TextSecure ay Signal na ngayon.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">Ang TextSecure at RedPhone ay iisang app na ngayon: Signal. Pindutin upang tuklasin.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Ipinakikilala ang ligtas na video call.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Ngayon ay suportado na ng Signal ang ligtas na video call. Tumawag lang sa Signal gaya ng dati, pindutin ang video button, at makipagkumustahan.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Ngayon ay suportado na ng Signal ang ligtas na video call.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Ngayon ay suportado na ng Signal ang ligtas na video call. Pindutin upang tuklasin.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Handa na para sa iyong closeup?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Ngayon ay maibabahagi mo na ang iyong profile photo at pangalan sa mga kaibigang nasa Signal</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Narito na ang mga profile sa Signal</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Ipinakikilala ang typing indicators.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Mapipili mo na kung gusto mong makita at ipaalam kung may tina-type na mensahe.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Gusto mo bang i-enable na ang mga ito?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Narito na ang typing indicators</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">I-enable ang typing indicators</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">I-on ang typing indicators</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Ayaw ko, salamat na lang</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Ipinakikilala ang mga preview ng link</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Suportado na ang mga opsyonal na preview ng link para sa ilan sa mga pinakasikat na site sa Internet.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Maaaring mong i-disable o i-enable ang feature na ito anumang oras sa iyong Signal settings (Privacy &gt; Magpadala ng mga preview ng link).</string>
-  <string name="ExperienceUpgradeActivity_got_it">OK</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Ipinakikilala ang mga sticker</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Bakit gagamit ng salita kung puwede namang gumamit ng stickers?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Bakit gagamit ng salita kung puwede namang gumamit ng stickers? Pindutin ang icon na ito sa iyong keyboard:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Tara na</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Welcome sa Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">Ang TextSecure at RedPhone ay isa nang pribadong mensahero para sa lahat ng sitwasyon: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Welcome sa Signal!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">Ang TextSecure ay Signal na ngayon.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">Ang TextSecure at RedPhone ay iisang app na ngayon: Signal. Pindutin upang tuklasin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Ipinakikilala ang ligtas na video call.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Ngayon ay suportado na ng Signal ang ligtas na video call. Tumawag lang sa Signal gaya ng dati, pindutin ang video button, at makipagkumustahan.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Ngayon ay suportado na ng Signal ang ligtas na video call.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Ngayon ay suportado na ng Signal ang ligtas na video call. Pindutin upang tuklasin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Handa na para sa iyong closeup?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Ngayon ay maibabahagi mo na ang iyong profile photo at pangalan sa mga kaibigang nasa Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Narito na ang mga profile sa Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Ipinakikilala ang typing indicators.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Mapipili mo na kung gusto mong makita at ipaalam kung may tina-type na mensahe.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Gusto mo bang i-enable na ang mga ito?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Narito na ang typing indicators</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">I-enable ang typing indicators</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">I-on ang typing indicators</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Ayaw ko, salamat na lang</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Ipinakikilala ang mga preview ng link</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Suportado na ang mga opsyonal na preview ng link para sa ilan sa mga pinakasikat na site sa Internet.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Maaaring mong i-disable o i-enable ang feature na ito anumang oras sa iyong Signal settings (Privacy &gt; Magpadala ng mga preview ng link).</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">OK</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Ipinakikilala ang mga sticker</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Bakit gagamit ng salita kung puwede namang gumamit ng stickers?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Bakit gagamit ng salita kung puwede namang gumamit ng stickers? Pindutin ang icon na ito sa iyong keyboard:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Tara na</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">May kinukuhang mensahe…</string>
   <!--GcmRefreshJob-->
@@ -1635,8 +1635,8 @@
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Inililipat ang database ng Signal</string>
   <string name="PushDecryptJob_new_locked_message">Bagong naka-lock na mensahe</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">I-unlock upang makita ang mga nakabinbin na mensahe</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">I-unlock upang makumpleto ang pag-update</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Paki-unlock ang Signal upang makumpleto ang pag-update </string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">I-unlock upang makumpleto ang pag-update</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Paki-unlock ang Signal upang makumpleto ang pag-update </string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">I-backup ang passphrase</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Ang mga backup ay ise-save sa panlabas na storage at gagawing encrypted gamit ang passphrase sa ibaba. Kailangang nasa iyo ang passphrase na ito upang mag-restore ng backup.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Naisulat ko na ang passphrase na ito. Kung wala ito, hindi ako makakapag-restore ng backup. </string>
