--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -114,6 +114,8 @@
   <string name="CommunicationActions_start_voice_call">Ĉu eki voĉ-alvokon?</string>
   <string name="CommunicationActions_cancel">Nuligi</string>
   <string name="CommunicationActions_call">Alvoko</string>
+  <string name="CommunicationActions_insecure_call">Nesekura alvoko</string>
+  <string name="CommunicationActions_carrier_charges_may_apply">Via telefona provizanto eble pagigos vin. La numero, kiun vi estas alvokonta,  ne estas registrita kun Signal. La alvoko okazos pere de via telefona provizanto, ne pere de la interreto.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Via sekuriga numero kun %1$s ŝanĝiĝis. Tio povas aŭ signifi, ke iu provas interkapti viajn komunikojn, aŭ ke %2$s simple reinstalis Signal-on.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Vi eble volas kontroli vian sekurigan numeron kun ĉi tiu kontakto.</string>
@@ -310,6 +312,9 @@
   <string name="CustomDefaultPreference_using_default">Uzante defaŭltan: %s</string>
   <string name="CustomDefaultPreference_none">Neniu</string>
   <!--AvatarSelectionBottomSheetDialogFragment-->
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_photo">Elekti profilfoton</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__take_photo">Foti</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Elekti el la galerio</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Forviŝi profilfoton</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Nun</string>
@@ -343,33 +348,33 @@
   <string name="ShareActivity_share_with">Kunhavigi kun</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Pluraj kunsendaĵoj nur eblas kun bildoj kaj videaĵoj</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Bonvenon al Signal</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">„TextSecure“ kaj „RedPhone“ nun estas unu privata mesaĝilo por ĉiu okazo: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Bonvenon al Signal!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">„TextSecure“ nun estas Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">„TextSecure“ kaj „RedPhone“ nun estas unu aplikaĵo: Signal. Tuŝetu por esplori.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Diru saluton al sekuraj vidalvokoj.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal nun subtenas sekurajn videajn alvokojn. Simple komencigu Signal-an alvokon kiel kutime, tuŝetu la videan butonon, kaj mansalutas.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal nun subtenas sekuran vidalvokadon.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal nun subtenas sekuran vidalvokadon. Tuŝetu por esplori.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ĉu preta je via deproksima foto?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nun, vi povas kunhavigi viajn profilfoton kaj nomon kun amikoj ĉe Signal</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal-aj profiloj estas ĉi tie</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Enkonduko de la tajp-indikiloj.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">De nun, vi povas malnepre vidi kaj vidigi, kiam mesaĝoj estas skribiĝantaj.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Ĉu vi volas, ŝalti tiujn tajp-indikilojn tuj?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Tajp-indikiloj alvenas</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Ŝalti tajp-indikilojn</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Ŝalti tajp-indikilojn</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Ne, dankon</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Jen la antaŭrigardo de ligiloj</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Opciaj antaŭrigardoj de ligiloj disponeblas nun por kelkaj el la plej popularaj retejoj.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Vi povas ŝalti aŭ malŝalti tiun funkcion en viaj Signal-agordoj (Privateco → Sendi antaŭrigardojn de ligilo).</string>
-  <string name="ExperienceUpgradeActivity_got_it">Bone</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Jen la glumarkoj</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Kial uzi vortojn, kiam vi povas uzi glumarkojn?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Kial uzi vortojn, kiam vi povas uzi glumarkojn? Tuŝetu tiun piktogramon en via klavaro:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Daŭrigi</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Bonvenon al Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">„TextSecure“ kaj „RedPhone“ nun estas unu privata mesaĝilo por ĉiu okazo: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Bonvenon al Signal!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">„TextSecure“ nun estas Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">„TextSecure“ kaj „RedPhone“ nun estas unu aplikaĵo: Signal. Tuŝetu por esplori.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Diru saluton al sekuraj vidalvokoj.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal nun subtenas sekurajn videajn alvokojn. Simple komencigu Signal-an alvokon kiel kutime, tuŝetu la videan butonon, kaj mansalutas.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal nun subtenas sekuran vidalvokadon.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal nun subtenas sekuran vidalvokadon. Tuŝetu por esplori.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ĉu preta je via deproksima foto?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nun, vi povas kunhavigi viajn profilfoton kaj nomon kun amikoj ĉe Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal-aj profiloj estas ĉi tie</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Enkonduko de la tajp-indikiloj.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">De nun, vi povas malnepre vidi kaj vidigi, kiam mesaĝoj estas skribiĝantaj.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Ĉu vi volas, ŝalti tiujn tajp-indikilojn tuj?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Tajp-indikiloj alvenas</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">Ŝalti tajp-indikilojn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Ŝalti tajp-indikilojn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Ne, dankon</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Jen la antaŭrigardo de ligiloj</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Opciaj antaŭrigardoj de ligiloj disponeblas nun por kelkaj el la plej popularaj retejoj.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Vi povas ŝalti aŭ malŝalti tiun funkcion en viaj Signal-agordoj (Privateco → Sendi antaŭrigardojn de ligilo).</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">Bone</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Jen la glumarkoj</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Kial uzi vortojn, kiam vi povas uzi glumarkojn?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Kial uzi vortojn, kiam vi povas uzi glumarkojn? Tuŝetu tiun piktogramon en via klavaro:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Daŭrigi</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Ricevo de mesaĝo…</string>
   <!--GcmRefreshJob-->
@@ -1213,7 +1218,26 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Vi povas nun elekti, ĉu vi akceptas novan interparolon. Vi povos elekti inter „Akcepti“, „Forigi“ aŭ „Bloki“ ĝin.</string>
   <!--HelpFragment-->
   <string name="HelpFragment__help">Helpo</string>
+  <string name="HelpFragment__have_you_read_our_faq_yet">Ĉu vi jam legis nian respondaron?</string>
   <string name="HelpFragment__next">Sekva</string>
+  <string name="HelpFragment__contact_us">Kontaktu nin</string>
+  <string name="HelpFragment__tell_us_whats_going_on">Diru al ni, kio okazas</string>
+  <string name="HelpFragment__include_debug_log">Aldoni sencimigan protokolon.</string>
+  <string name="HelpFragment__whats_this">Kio estas tio?</string>
+  <string name="HelpFragment__how_do_you_feel">Kiel vi sentas vin? (malnepra)</string>
+  <string name="HelpFragment__support_info">Helpinformo</string>
+  <string name="HelpFragment__subject">Pri:</string>
+  <string name="HelpFragment__signal_android_support_request">Helpopeto pri Android-Signal</string>
+  <string name="HelpFragment__device_info">Aparatinformo:</string>
+  <string name="HelpFragment__android_version">Android-versio:</string>
+  <string name="HelpFragment__signal_version">Signal-versio:</string>
+  <string name="HelpFragment__locale">Lokaĵaro:</string>
+  <string name="HelpFragment__debug_log">Sencimiga protokolo:</string>
+  <string name="HelpFragment__na">neaplikebla</string>
+  <string name="HelpFragment__could_not_upload_logs">Protokolo ne alŝutiĝis</string>
+  <string name="HelpFragment__signal_support">Signal-helpo</string>
+  <string name="HelpFragment__please_be_as_descriptive_as_possible">Priskribu laŭeble precize por helpi al ni kompreni la problemon.</string>
+  <string name="HelpFragment__no_email_app_found">Neniu retpoŝtilo trovita.</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importi</string>
   <string name="arrays__use_default">Uzi defaŭltan</string>
@@ -1612,8 +1636,8 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Transigo de la Signal-datumbazo</string>
   <string name="PushDecryptJob_new_locked_message">Nova ŝlosita mesaĝo</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Malŝlosi por vidi pritraktotajn mesaĝojn</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Malŝlosi por fini ĝisdatigon</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Bv. malŝlosi Signal-on por fini ĝisdatigon</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Malŝlosi por fini ĝisdatigon</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Bv. malŝlosi Signal-on por fini ĝisdatigon</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Savkopii pasfrazon</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Savkopioj konserviĝos al ekstera konservejo kaj ĉifriĝos per la suba pasfrazo. Vi devos havi tiun ĉi pasfrazon por restaŭri savkopion.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Mi skribis tiun ĉi pasfrazon. Sen ĝi, mi ne povos restaŭri savkopion.</string>
