--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -114,6 +114,7 @@
   <string name="CommunicationActions_start_voice_call">Sesli arama başlat?</string>
   <string name="CommunicationActions_cancel">İptal</string>
   <string name="CommunicationActions_call">Ara</string>
+  <string name="CommunicationActions_insecure_call">Şifresiz arama</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s ile olan güvenlik numaranız değişti. Bu, birisinin iletişiminizi kesmeye çalıştığı ya da %2$s Signal\'i yeniden yüklemiş olduğu anlamına gelebilir.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Bu kişiyle güvenlik numaranızı doğrulamak isteyebilirsiniz.</string>
@@ -310,6 +311,9 @@
   <string name="CustomDefaultPreference_using_default">Varsayılan \'%s\' kullanılıyor</string>
   <string name="CustomDefaultPreference_none">Hiçbiri</string>
   <!--AvatarSelectionBottomSheetDialogFragment-->
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_photo">Fotoğraf seç</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__take_photo">Fotoğraf çek</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Galeriden seç</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Fotoğrafı kaldır</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Şimdi</string>
@@ -343,33 +347,33 @@
   <string name="ShareActivity_share_with">Paylaşılacak kişi</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Çoklu ekler sadece resim ve dosyalarda destekleniyor</string>
   <!--ExperienceUpgradeActivity-->
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal\'e hoşgeldiniz.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure ve RedPhone artık tek bir özel haberleşme uygulaması: Signal.</string>
-  <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal\'e hoşgeldiniz!</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure\'un adı artık Signal</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure ve RedPhone artık tek bir uygulama: Signal. Keşfetmek için dokunun.</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Güvenli görüntülü aramalara merhaba deyin.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal artık güvenli görüntülü aramayı destekliyor. Her zamanki gibi bir Signal araması başlatın, video düğmesine dokunun ve selam verin.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal şimdi güvenli görüntülü aramayı destekliyor.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal artık güvenli görüntülü aramayı destekliyor. Keşfetmek için dokunun.</string>
-  <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Yakın çekime hazır mısınız?</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Artık Signal\'deki arkadaşlarınızla isminizi ve profil fotoğrafınızı paylaşabilirsiniz</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profilleri geldi</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Yazma göstergeleriyle tanışın.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Artık iletilerin yazıldığını görme ve paylaşma seçeneğine sahipsiniz.</string>
-  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Şimdi etkinleştirmek ister misiniz?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Yazma göstergeleri geldi</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Yazma göstergelerini etkinleştrin.</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Yazma göstergelerini aç</string>
-  <string name="ExperienceUpgradeActivity_no_thanks">Hayır teşekkürler</string>
-  <string name="ExperienceUpgradeActivity_introducing_link_previews">Bağlantı ön izlemeleri ile tanışın.</string>
-  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">İsteğe bağlı bağlantı ön izlemeleri artık İnternet\'teki bazı gözde siteler için desteklenmektedir.</string>
-  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Bu özelliği istediğiniz zaman Signal ayarlarınızdan (Gizlilik &gt; Bağlantı ön izlemelerini gönder). etkinleştirebilir veya devre dışı bırakabilirsiniz.</string>
-  <string name="ExperienceUpgradeActivity_got_it">Anladım</string>
-  <string name="ExperienceUpgradeActivity_introducing_stickers">Karşınızda çıkartmalar</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Çıkartma kullanabilecek iken neden kelimeler kullanasınız?</string>
-  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Çıkartma kullanabilecek iken neden kelimeler kullanasınız? Klavyenizdeki bu simgeye dokunun:</string>
-  <string name="ExperienceUpgradeActivity_lets_go">Hadi başlayalım</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal\'e hoşgeldiniz.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure ve RedPhone artık tek bir özel haberleşme uygulaması: Signal.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal\'e hoşgeldiniz!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">TextSecure\'un adı artık Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure ve RedPhone artık tek bir uygulama: Signal. Keşfetmek için dokunun.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Güvenli görüntülü aramalara merhaba deyin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Signal artık güvenli görüntülü aramayı destekliyor. Her zamanki gibi bir Signal araması başlatın, video düğmesine dokunun ve selam verin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Signal şimdi güvenli görüntülü aramayı destekliyor.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal artık güvenli görüntülü aramayı destekliyor. Keşfetmek için dokunun.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Yakın çekime hazır mısınız?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Artık Signal\'deki arkadaşlarınızla isminizi ve profil fotoğrafınızı paylaşabilirsiniz</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profilleri geldi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Yazma göstergeleriyle tanışın.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Artık iletilerin yazıldığını görme ve paylaşma seçeneğine sahipsiniz.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Şimdi etkinleştirmek ister misiniz?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_typing_ui_title">Yazma göstergeleri geldi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_enable_typing_indicators">Yazma göstergelerini etkinleştrin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Yazma göstergelerini aç</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_no_thanks">Hayır teşekkürler</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_link_previews">Bağlantı ön izlemeleri ile tanışın.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">İsteğe bağlı bağlantı ön izlemeleri artık İnternet\'teki bazı gözde siteler için desteklenmektedir.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Bu özelliği istediğiniz zaman Signal ayarlarınızdan (Gizlilik &gt; Bağlantı ön izlemelerini gönder). etkinleştirebilir veya devre dışı bırakabilirsiniz.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_got_it">Anladım</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_introducing_stickers">Karşınızda çıkartmalar</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Çıkartma kullanabilecek iken neden kelimeler kullanasınız?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Çıkartma kullanabilecek iken neden kelimeler kullanasınız? Klavyenizdeki bu simgeye dokunun:</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_lets_go">Hadi başlayalım</string> -->
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Bir ileti alınıyor…</string>
   <!--GcmRefreshJob-->
@@ -1214,7 +1218,14 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--HelpFragment-->
   <string name="HelpFragment__help">Yardım</string>
   <string name="HelpFragment__next">İleri</string>
+  <string name="HelpFragment__contact_us">Bizimle iletişime geçin</string>
+  <string name="HelpFragment__subject">Konu:</string>
+  <string name="HelpFragment__device_info">Cihaz bilgisi:</string>
+  <string name="HelpFragment__android_version">Android sürümü:</string>
+  <string name="HelpFragment__signal_version">Signal sürümü:</string>
+  <string name="HelpFragment__could_not_upload_logs">Günlükler karşıya yüklenemedi</string>
   <string name="HelpFragment__signal_support">Signal Desteği</string>
+  <string name="HelpFragment__no_email_app_found">Eposta uygulaması bulunamadı.</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">İçe Aktar</string>
   <string name="arrays__use_default">Varsayılanı kullan</string>
@@ -1613,8 +1624,8 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Signal veritabanı taşınıyor</string>
   <string name="PushDecryptJob_new_locked_message">Yeni kilitli ileti</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Bekleyen iletileri görüntülemek için kilidi açın</string>
-  <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Güncellemeyi tamamlamak için kilidi açın</string>
-  <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Güncellemeyi tamamlamak için lütfen Signal kilidini açın</string>
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_unlock_to_complete_update">Güncellemeyi tamamlamak için kilidi açın</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ExperienceUpgradeActivity_please_unlock_signal_to_complete_update">Güncellemeyi tamamlamak için lütfen Signal kilidini açın</string> -->
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Yedek parolası</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Yedekler harici depolama alanına kaydedilecek ve aşağıdaki parola ile şifrelenecektir. Yedeği geri yüklemek için bu parolaya sahip olmanız gereklidir.</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Bu parolayı kaydettim. Parola olmadan yedeği geri yükleyemem.</string>
